agregando la cards

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -24,13 +24,36 @@
                 <li> <a href="contactanos.html">contactanos</a></li>
             </ul>
         </nav>
-    <main class="main-1"> 
-        
-        <img src="../img/INFINITY-PERRO-ADULT-21K.jpg" alt="INFINITY-PERRO-ADULT-21K" title="INFINITY-PERRO-ADULT-21K">
-        <img src="../img/Kongo-Gold-Adulto.jpg" alt="Kongo-Gold-Adulto" title="Kongo-Gold-Adulto"> 
-        <img src="../img/PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21.jpg" alt="PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21" title="PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21">
-        <img src="../img/WHISKAS-ADULTO-CARNE.jpg" alt="WHISKAS-ADULTO-CARNE" title="WHISKAS-ADULTO-CARNE">
-    </main>
+        <main class="main-1"> 
+            <div class="card">
+                <img src="../img/INFINITY-PERRO-ADULT-21K.jpg" alt="INFINITY-PERRO-ADULT-21K" title="INFINITY-PERRO-ADULT-21K">
+                <div class="card-body">
+                  <h5 class="card-title">INFINITY-PERRO-ADULT-21K</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quo aut, nemo ipsa unde laboriosam. Impedit pariatur nihil vel accusamus consectetur nemo esse eveniet ducimus illum, necessitatibus doloribus officiis aliquid?.</p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../img/Kongo-Gold-Adulto.jpg" alt="Kongo-Gold-Adulto" title="Kongo-Gold-Adulto"> 
+                <div class="card-body">
+                  <h5 class="card-title">Kongo-Gold-Adulto</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias incidunt reiciendis, perferendis recusandae perspiciatis doloremque magni dignissimos sit! Corrupti porro eligendi culpa totam repudiandae molestias ratione, inventore possimus voluptatem perferendis..</p>
+            </div>
+              </div>
+              <div class="card">
+                <img src="../img/PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21.jpg" alt="PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21" title="PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21">
+                <div class="card-body">
+                  <h5 class="card-title">PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam veniam ducimus, magni unde quasi rerum perspiciatis assumenda incidunt mollitia aperiam. Eligendi soluta doloribus repellendus vel exercitationem accusantium iusto totam iure.</p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="../img/WHISKAS-ADULTO-CARNE.jpg" alt="WHISKAS-ADULTO-CARNE" title="WHISKAS-ADULTO-CARNE">
+                <div class="card-body">
+                  <h5 class="card-title">WHISKAS-ADULTO-CARNE</h5>
+                  <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio cumque aspernatur quod, voluptas quidem, obcaecati numquam nemo voluptatibus voluptates laudantium ipsum atque a quasi? Dicta temporibus quaerat iusto a cupiditate!.</p>
+                </div>
+              </div>  
+        </main>
     <footer class="footer"> Página creada por Matias Garcia para pre-entrega de proyecto
         <a href="#logo-inicio">Ir arriba</a>
     </footer>
