--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="desccription" content="la mejor variedad de comida para tu mascota">
+    <meta name="keywords" content="mascotas, comida para mascotas, perro, gato">
     <link rel="shortcut icon" href="img/logo-nativo-labrador.jpg" type="image/x-icon">
     <title>Inicio</title>
     <link rel="stylesheet" href="css/styles.css">
@@ -12,9 +14,9 @@
 <body>
     <div id="grid">
         <header class="header">
-         <a href="index.html"><img src="img/logo-nativo-labrador.jpg" alt="" id="logo-inicio"></a>
+             <a href="index.html"><img src="img/logo-nativo-labrador.jpg" alt="imagen del logo en blanco y negro" id="logo-inicio"></a>
         </header>
-    <nav class="menu">
+        <nav class="menu">
                  <ul>
                     <li> <a href="index.html">Inicio</a> </li>
                     <li> <a href="pages/informacion general.html">informacion general</a></li>
@@ -22,20 +24,27 @@
                     <li> <a href="pages/ubicacion.html">ubicacion</a></li>
                     <li> <a href="pages/contactanos.html">contactanos</a></li>
                 </ul>
-    </nav>
+        </nav>
         <main class="main-1"> 
             <img src="img/local.jpg" alt="">
         </main>
         <section class="section-1">
-        <!--algo escribire, pero todavia no se que-->
-            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione, dicta nemo quia ipsam recusandae a harum nihil commodi sit doloribus! Accusantium adipisci perspiciatis eaque corrupti animi, dicta dolor. Enim, dolore!</p>
+            <p> Sin duda, las mascotas se han convertido en un miembro más de la familia. 
+                Cada día son más valoradas, pues más allá de brindar diversión y compañía, su presencia tiene un impacto positivo en 
+                la salud física y mental de las personas, haciendo que la calidad de vida y la sensación de bienestar aumente. Por estas razones y más, alimentarlos
+            con los mejores productos para ellos es la mejor opcion. Nosotros ofrecemos un sin fin de productos de calidad cuyo stock y variedad se encuentra en aumento constantemente.</p>
         </section>
         <section class="section-2">
             <h2>Nuestras redes sociales</h2>
-            <a href="https://www.instagram.com/nativo.pets/"><img src="img/logo-insta.jpg" alt=""></a>
-            <a href="https://www.facebook.com/nativopets?mibextid=ZbWKwL"><img src="img/logo-face.jpg" alt=""></a>
+            <div class="img-flex">
+                <div>
+                    <a href="https://www.instagram.com/nativo.pets/"><img src="img/logo-insta.jpg" alt="imagen de instagram"></a>
+                </div>
+                <div>
+                     <a href="https://www.facebook.com/nativopets?mibextid=ZbWKwL"><img src="img/logo-face.jpg" alt="imagen de facebook"></a>
+                 </div>
+            </div>
         </section>
-    
         <footer class="footer"> Página creada por Matias Garcia para pre-entrega de proyecto
             <a href="#logo-inicio">Ir arriba</a>
         </footer>
