--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -12,10 +12,10 @@
 
 <body>
     <div id="grid">
-    <header class="header">
-        <a href="../index.html"><img src="../img/logo-nativo-labrador.jpg" alt="logo-nativo-labrador" title="Logo de nativo Labrador" id="logo-inicio"></a>
+        <header class="header">
+            <a href="../index.html"><img src="../img/logo-nativo-labrador.jpg" alt="imagen del logo en blanco y negro" title="Logo de nativo Labrador" id="logo-inicio"></a>
         </header>
-    <nav class="menu">
+        <nav class="menu">
             <ul>
                <li> <a href="../index.html">Inicio</a> </li>
                <li> <a href="informacion general.html">informacion general</a></li>
@@ -23,36 +23,42 @@
                <li> <a href="ubicacion.html">ubicacion</a></li>
                <li> <a href="contactanos.html">contactanos</a></li>
            </ul>
-    </nav>
-    <main class="main-1"> 
-        <form>
-            <div>
-                <label for="Nombre">Nombre y apellido</label> <input type="text" name="" id="Nombre">
-            </div>
-            <div>
-                <label for="DNI">DNI</label> <input type="number" name="" id="DNI">
-            </div>
-            <div>
-                <label for="email">Email</label> <input type="email" name="" id="email">
-            </div>
-            <div>
-                <label for="Genero">Genero</label> <input type="text" name="" id="Genero">
-            </div>
-            <div> 
-                <label for="tel">Telefono</label> <input type="tel" name="" id="tel">
-            </div>
-            <div>
-                <label for="Comentario">Comentario</label> <textarea name="" id="Comentario" cols="30" rows="10"></textarea>
-            </div>    
-            <div>
-                <input type="submit" value="Enviar formulario">
-                <input type="reset" value="Limpiar el formulario">
-            </div>
-        </form>
-    </main>
-    <footer class="footer"> Página creada por Matias Garcia para pre-entrega de proyecto
-        <a href="#logo-inicio">Ir arriba</a>
-    </footer>
-</div>
+        </nav>
+        <main class="main-1"> 
+            <form>
+                <div>
+                    <label for="Nombre">Nombre y apellido</label> <input type="text" name="" id="Nombre">
+                </div>
+                <div>
+                    <label for="DNI">DNI</label> <input type="number" name="" id="DNI">
+                </div>
+                <div>
+                    <label for="email">Email</label> <input type="email" name="" id="email">
+                </div>
+                <div>
+                    <label for="Genero">Genero</label> <input type="text" name="" id="Genero">
+                </div>
+                <div> 
+                    <label for="tel">Telefono</label> <input type="tel" name="" id="tel">
+                </div>
+                <div>
+                    <label for="Comentario">Comentario</label> <textarea name="" id="Comentario" cols="30" rows="10"></textarea>
+                </div>    
+                <div>
+                    <input type="submit" value="Enviar formulario">
+                    <input type="reset" value="Limpiar el formulario">
+                </div>
+            </form>
+        </main>
+        <section class="section-1">
+            <p>Envianos tus datos y en breve se comunicarán desde nuestra sucursal para brindarte la mejor atención. </p>         
+        </section>
+        <section class="section-2">
+            Todo el personal esta altamente capacitado para cubrir las necesidades y exigencias que requiera su consulta y/o pedido de compra.
+        </section>
+        <footer class="footer"> Página creada por Matias Garcia para pre-entrega de proyecto
+                <a href="#logo-inicio">Ir arriba</a>
+        </footer>
+    </div>
 </body>
 </html>
