--- a/pages/informacion general.html
+++ b/pages/informacion general.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div id="grid">
-    <header class="header">
-        <a href="../index.html"><img src="../img/logo-nativo-labrador.jpg" alt="logo-nativo-labrador" title="Logo de nativo Labrador" id="logo-inicio"></a>
+        <header class="header">
+            <a href="../index.html"><img src="../img/logo-nativo-labrador.jpg" alt="imagen del logo en blanco y negro" title="Logo de nativo Labrador" id="logo-inicio"></a>
         </header>
-    <nav class="menu">
+        <nav class="menu">
             <ul>
                 <li> <a href="../index.html">Inicio</a> </li>
                 <li> <a href="informacion general.html">informacion general</a></li>
@@ -22,15 +22,21 @@
                 <li> <a href="ubicacion.html">ubicacion</a></li>
                 <li> <a href="contactanos.html">contactanos</a></li>
             </ul>
-    </nav>
-    <main class="main-1">
-        <h1>Alimentos Balanceados Mayorista/Minorista RAPHI</h1>
-        <p>Horarios de atención: Lunes a Viernes de 11:00 a 19:00,y sabados de 10:00 hs a 15:00 hs</p>
-        <p>Realizamos envios a cualquier parte sin costos, consulte por nuestros precios en la sección productos o a través de nuestras redes y teléfonos</p>
-    </main>
-    <footer class="footer"> Página creada por Matias Garcia para pre-entrega de proyecto
-        <a href="#logo-inicio">Ir arriba</a>
-    </footer>
-</div>
+        </nav>
+        <main class="main-1">
+            <h2>Alimentos Balanceados Mayorista/Minorista RAPHI</h2>
+            <p>Horarios de atención: Lunes a Viernes de 11:00 a 19:00,y sabados de 10:00 hs a 15:00 hs</p>
+            <p>Realizamos envios a cualquier parte sin costos, consulte por nuestros precios en la sección productos o a través de nuestras redes y teléfonos</p>
+        </main>
+        <section class="section-1">
+            <p>feriados cerrados</p>         
+        </section>
+        <section class="section-2">
+            <p>domingos cerrados</p>
+        </section>
+        <footer class="footer"> Página creada por Matias Garcia para pre-entrega de proyecto
+            <a href="#logo-inicio">Ir arriba</a>
+        </footer>
+    </div>
 </body>
 </html>
