--- a/pages/productos.html
+++ b/pages/productos.html
@@ -12,10 +12,10 @@
 
 <body>
     <div id="grid">
-    <header class="header">
-        <a href="../index.html"><img src="../img/logo-nativo-labrador.jpg" alt="logo-nativo-labrador" title="Logo de nativo Labrador" id="logo-inicio"></a>
-        </header>
-        <nav class="menu">
+      <header class="header">
+        <a href="../index.html"><img src="../img/logo-nativo-labrador.jpg" alt="imagen del logo en blanco y negro" title="Logo de nativo Labrador" id="logo-inicio"></a>
+      </header>
+      <nav class="menu">
             <ul>
                 <li> <a href="../index.html">Inicio</a> </li>
                 <li> <a href="informacion general.html">informacion general</a></li>
@@ -23,40 +23,63 @@
                 <li> <a href="ubicacion.html">ubicacion</a></li>
                 <li> <a href="contactanos.html">contactanos</a></li>
             </ul>
-        </nav>
-        <main class="main-1"> 
+      </nav>
+      <main class="main-1">
             <div class="card">
-                <img src="../img/INFINITY-PERRO-ADULT-21K.jpg" alt="INFINITY-PERRO-ADULT-21K" title="INFINITY-PERRO-ADULT-21K">
-                <div class="card-body">
+                <div class="producto">
+                  <img src="../img/INFINITY-PERRO-ADULT-21K.jpg" alt="INFINITY-PERRO-ADULT-21K" title="INFINITY-PERRO-ADULT-21K">
+                </div>
+                <div>
                   <h5 class="card-title">INFINITY-PERRO-ADULT-21K</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quo aut, nemo ipsa unde laboriosam. Impedit pariatur nihil vel accusamus consectetur nemo esse eveniet ducimus illum, necessitatibus doloribus officiis aliquid?.</p>
+                  <p class="card-text">Infinity Perros Adultos aporta el 100 % de los nutrientes necesarios para que su perro goce de una vida sana y placentera.
+                    Aporta óptimos niveles energéticos, proteínas de alta digestabilidad, grasas de alto valor biológico, hidratos de carbono perfectamente dextrinizados, vitaminas, minerales, fibras adecuadas para una mejor salud intestinal y una excelente palatabilidad.
+                    Infinity Perros Adultos está formulado contemplando los niveles y perfiles nutricionales establecidos por AAFCO (Asociación Americana de Oficiales en Control de Alimentos) para un adecuado mantenimiento de su perro adulto.</p>
                 </div>
-              </div>
-              <div class="card">
-                <img src="../img/Kongo-Gold-Adulto.jpg" alt="Kongo-Gold-Adulto" title="Kongo-Gold-Adulto"> 
-                <div class="card-body">
-                  <h5 class="card-title">Kongo-Gold-Adulto</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias incidunt reiciendis, perferendis recusandae perspiciatis doloremque magni dignissimos sit! Corrupti porro eligendi culpa totam repudiandae molestias ratione, inventore possimus voluptatem perferendis..</p>
             </div>
-              </div>
-              <div class="card">
-                <img src="../img/PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21.jpg" alt="PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21" title="PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21">
-                <div class="card-body">
+            <div class="card">
+                <div class="producto">
+                  <img src="../img/Kongo-Gold-Adulto.jpg" alt="Kongo-Gold-Adulto" title="Kongo-Gold-Adulto">
+                </div>
+                <div>
+                  <h5 class="card-title">Kongo-Gold-Adulto</h5>
+                  <p class="card-text">Es un complejo de protección que de manera rápida y efectiva colabora con el desarrollo de un sistema inmune mas fuerte debido a
+                     la utilización de proteínas seleccionadas exclusivamente por su alto valor biológico y su rápida disponibilidad de absorción. Esto aporta mayor vitalidad y resistencia para tu mascota.</p>
+                </div>       
+            </div>
+            <div class="card">
+                <div class="producto">
+                  <img src="../img/PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21.jpg" alt="PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21" title="PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21">
+                </div>
+                <div>  
                   <h5 class="card-title">PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam veniam ducimus, magni unde quasi rerum perspiciatis assumenda incidunt mollitia aperiam. Eligendi soluta doloribus repellendus vel exercitationem accusantium iusto totam iure.</p>
+                  <p class="card-text">Pedigree ADULTO ETAPA 2 (de 1 a 7 años). Con fibras naturales y proteínas de alta calidad para una nutrición completa. Pedigree Adulto aporta una nutrición profesional 
+                    para cada etapa de su vida, cubriendo las 4 necesidades universales. SISTEMA DIGESTIVO: contiene un balance óptimo de fibra y proteínas 
+                    de alta calidad que contribuyen a un sistema digestivo saludable y heces más firmes. SISTEMA INMUNE: con antioxidantes, como la vitamina E, 
+                    que contribuye a mantener sus defensas saludables. SALUD ORAL: ayuda a la limpieza de sus dientes, a reducir la formación del sarro y a que sus 
+                    encías estén más saludables. PIEL Y PELO: contiene minerales como el Zinc, y aceites esenciales como el Omega 6, para nutrir su piel y que su pelo
+                     esté más brilloso</p>
+                </div>       
+            </div>
+            <div class="card">
+                <div class="producto">
+                  <img src="../img/WHISKAS-ADULTO-CARNE.jpg" alt="WHISKAS-ADULTO-CARNE" title="WHISKAS-ADULTO-CARNE">
                 </div>
-              </div>
-              <div class="card">
-                <img src="../img/WHISKAS-ADULTO-CARNE.jpg" alt="WHISKAS-ADULTO-CARNE" title="WHISKAS-ADULTO-CARNE">
-                <div class="card-body">
+                <div>
                   <h5 class="card-title">WHISKAS-ADULTO-CARNE</h5>
-                  <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio cumque aspernatur quod, voluptas quidem, obcaecati numquam nemo voluptatibus voluptates laudantium ipsum atque a quasi? Dicta temporibus quaerat iusto a cupiditate!.</p>
-                </div>
-              </div>  
+                  <p class="card-text">Nueva receta, cuidadosamente preparada para satisfacer las necesidades nutricionales de su gatoAlimento para gatos 100% completo y balanceadoFibras múltiples 
+                    apoyan el funcionamiento gastrointestinal, contribuyendo a la formación de heces firmes y fáciles de limpiar.Recomendado por Waltham Petcare Science Institute - Una de las autoridades mundiales líderes en nutrición, cuidado y bienestar animal</p>
+                </div>      
+            </div>
         </main>
-    <footer class="footer"> Página creada por Matias Garcia para pre-entrega de proyecto
-        <a href="#logo-inicio">Ir arriba</a>
-    </footer>
+        <section class="section-1">
+          <p>Podrán elegir entre un amplio catalogo de productos, los cuales se actualizan semanalmente</p>         
+        </section>
+        <section class="section-2">
+          <p>Si tenes dudas sobre alguna marca, no dudes en consultarnos.</p>
+        </section>
+        <footer class="footer"> Página creada por Matias Garcia para pre-entrega de proyecto
+          <a href="#logo-inicio">Ir arriba</a>
+        </footer>
 </div>
 </body>
 </html>
