--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -12,26 +12,33 @@
 
 <body>
     <div id="grid">
-    <header class="header">
-        <a href="../index.html"><img src="../img/logo-nativo-labrador.jpg" alt="logo-nativo-labrador" title="Logo de nativo Labrador" id="logo-inicio"></a>
-    </header>
-    <nav class="menu">
-        <ul>
-            <li> <a href="../index.html">Inicio</a> </li>
-            <li> <a href="informacion general.html">informacion general</a></li>
-            <li> <a href="productos.html">productos</a></li>
-            <li> <a href="ubicacion.html">ubicacion</a></li>
-            <li> <a href="contactanos.html">contactanos</a></li>
-        </ul>
-    </nav>
-    <main class="main-1"> 
-        <p> Encuentranos en nuestra sucursal de Av.Rivadavia 13360 </p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d948.1328243961275!2d-58.5556901543925!3d-34.640192165906335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9fff0f1108f%3A0xb5d19dc4593e2b2!2sNativo%20Pets!5e0!3m2!1ses!2sar!4v1679878129839!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-    </main>
-    <footer class="footer"> Página creada por Matias Garcia para pre-entrega de proyecto
-        <a href="#logo-inicio">Ir arriba</a>
-    </footer>
+        <header class="header">
+        <a href="../index.html"><img src="../img/logo-nativo-labrador.jpg" alt="imagen del logo en blanco y negro" title="Logo de nativo Labrador" id="logo-inicio"></a>
+        </header>
+        <nav class="menu">
+             <ul>
+                <li> <a href="../index.html">Inicio</a> </li>
+                <li> <a href="informacion general.html">informacion general</a></li>
+                <li> <a href="productos.html">productos</a></li>
+                <li> <a href="ubicacion.html">ubicacion</a></li>
+                <li> <a href="contactanos.html">contactanos</a></li>
+            </ul>
+        </nav>
+        <main class="main-1"> 
+            <h2> Encuentranos en nuestra sucursal de Av.Rivadavia 13360 </h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d948.1328243961275!2d-58.5556901543925!3d-34.640192165906335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9fff0f1108f%3A0xb5d19dc4593e2b2!2sNativo%20Pets!5e0!3m2!1ses!2sar!4v1679878129839!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </main>
+        <section class="section-1">
+            <p> Todos nuestro empleados te asesoraran en lo que mas necesites, siempre con la mejor atención.</p>
+        </section>
+        <section class="section-2">
+            <p> Pueden dirigirse tambien a nuestra sección de contactos y enviarnos sus datos para poder comunicarnos con ustedes y realizar una atencion 
+                personalizada de sus necesidades.
+            </p>
+        </section>
+        <footer class="footer"> Página creada por Matias Garcia para pre-entrega de proyecto
+            <a href="#logo-inicio">Ir arriba</a>
+        </footer>
     </div>
 </body>
 </html>
