--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="desccription" content="la mejor variedad de comida para tu mascota">
+    <meta name="keywords" content="mascotas, comida para mascotas, perro, gato">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="../img/logo-nativo-labrador.jpg" type="image/x-icon">
     <title>contactanos</title>
@@ -25,28 +27,29 @@
            </ul>
         </nav>
         <main class="main-1"> 
+            <h3>Contactanos</h3>
             <form>
                 <div>
-                    <label for="Nombre">Nombre y apellido</label> <input type="text" name="" id="Nombre">
-                </div>
-                <div>
-                    <label for="DNI">DNI</label> <input type="number" name="" id="DNI">
-                </div>
-                <div>
-                    <label for="email">Email</label> <input type="email" name="" id="email">
-                </div>
-                <div>
-                    <label for="Genero">Genero</label> <input type="text" name="" id="Genero">
+                    <input type="text" name="" id="Nombre" placeholder="Nombre">
                 </div>
                 <div> 
-                    <label for="tel">Telefono</label> <input type="tel" name="" id="tel">
+                    <input type="number" name="" id="DNI" placeholder="DNI">
+                </div>
+                <div> 
+                    <input type="email" name="" id="email" placeholder="e-mail">
                 </div>
                 <div>
-                    <label for="Comentario">Comentario</label> <textarea name="" id="Comentario" cols="30" rows="10"></textarea>
+                    <input type="text" name="" id="Genero" placeholder="Genero">
+                </div>
+                <div> 
+                    <input type="tel" name="" id="tel" placeholder="Telefono">
+                </div>
+                <div>
+                    <textarea name="" id="Comentario" cols="30" rows="10" placeholder="Comentarios"></textarea>
                 </div>    
                 <div>
-                    <input type="submit" value="Enviar formulario">
-                    <input type="reset" value="Limpiar el formulario">
+                    <input type="submit" value="Enviar formulario" class="boton">
+                    <input type="reset" value="Limpiar el formulario" class="boton">
                 </div>
             </form>
         </main>
