--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="desccription" content="la mejor variedad de comida para tu mascota">
+    <meta name="keywords" content="mascotas, comida para mascotas, perro, gato">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="../img/logo-nativo-labrador.jpg" type="image/x-icon">
     <title>productos</title>
@@ -27,10 +29,10 @@
       <main class="main-1">
             <div class="card">
                 <div class="producto">
-                  <img src="../img/INFINITY-PERRO-ADULT-21K.jpg" alt="INFINITY-PERRO-ADULT-21K" title="INFINITY-PERRO-ADULT-21K">
+                  <img src="../img/INFINITY-PERRO-ADULT-21K.jpg" alt="INFINITY PERRO ADULT 21K" title="INFINITY PERRO ADULTO">
                 </div>
                 <div>
-                  <h5 class="card-title">INFINITY-PERRO-ADULT-21K</h5>
+                  <h5 class="card-title">INFINITY PERRO ADULT</h5>
                   <p class="card-text">Infinity Perros Adultos aporta el 100 % de los nutrientes necesarios para que su perro goce de una vida sana y placentera.
                     Aporta óptimos niveles energéticos, proteínas de alta digestabilidad, grasas de alto valor biológico, hidratos de carbono perfectamente dextrinizados, vitaminas, minerales, fibras adecuadas para una mejor salud intestinal y una excelente palatabilidad.
                     Infinity Perros Adultos está formulado contemplando los niveles y perfiles nutricionales establecidos por AAFCO (Asociación Americana de Oficiales en Control de Alimentos) para un adecuado mantenimiento de su perro adulto.</p>
@@ -38,20 +40,20 @@
             </div>
             <div class="card">
                 <div class="producto">
-                  <img src="../img/Kongo-Gold-Adulto.jpg" alt="Kongo-Gold-Adulto" title="Kongo-Gold-Adulto">
+                  <img src="../img/Kongo-Gold-Adulto.jpg" alt="Kongo Gold Adulto" title="Kongo Gold Adulto">
                 </div>
                 <div>
-                  <h5 class="card-title">Kongo-Gold-Adulto</h5>
+                  <h5 class="card-title">Kongo Gold Adulto</h5>
                   <p class="card-text">Es un complejo de protección que de manera rápida y efectiva colabora con el desarrollo de un sistema inmune mas fuerte debido a
                      la utilización de proteínas seleccionadas exclusivamente por su alto valor biológico y su rápida disponibilidad de absorción. Esto aporta mayor vitalidad y resistencia para tu mascota.</p>
                 </div>       
             </div>
             <div class="card">
                 <div class="producto">
-                  <img src="../img/PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21.jpg" alt="PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21" title="PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21">
+                  <img src="../img/PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21.jpg" alt="PEDIGREE CARNE O CARNE Y VEGETAL 21" title="PEDIGREE SABOR CARNE O CARNE Y VEGETAL">
                 </div>
                 <div>  
-                  <h5 class="card-title">PEDIGREE-CARNE-O-CARNE-Y-VEGETAL-21</h5>
+                  <h5 class="card-title">PEDIGREE CARNE O - CARNE Y VEGETAL</h5>
                   <p class="card-text">Pedigree ADULTO ETAPA 2 (de 1 a 7 años). Con fibras naturales y proteínas de alta calidad para una nutrición completa. Pedigree Adulto aporta una nutrición profesional 
                     para cada etapa de su vida, cubriendo las 4 necesidades universales. SISTEMA DIGESTIVO: contiene un balance óptimo de fibra y proteínas 
                     de alta calidad que contribuyen a un sistema digestivo saludable y heces más firmes. SISTEMA INMUNE: con antioxidantes, como la vitamina E, 
@@ -62,10 +64,10 @@
             </div>
             <div class="card">
                 <div class="producto">
-                  <img src="../img/WHISKAS-ADULTO-CARNE.jpg" alt="WHISKAS-ADULTO-CARNE" title="WHISKAS-ADULTO-CARNE">
+                  <img src="../img/WHISKAS-ADULTO-CARNE.jpg" alt="WHISKAS ADULTO CARNE" title="WHISKAS ADULTO DE CARNE">
                 </div>
                 <div>
-                  <h5 class="card-title">WHISKAS-ADULTO-CARNE</h5>
+                  <h5 class="card-title">WHISKAS ADULTO SABOR CARNE</h5>
                   <p class="card-text">Nueva receta, cuidadosamente preparada para satisfacer las necesidades nutricionales de su gatoAlimento para gatos 100% completo y balanceadoFibras múltiples 
                     apoyan el funcionamiento gastrointestinal, contribuyendo a la formación de heces firmes y fáciles de limpiar.Recomendado por Waltham Petcare Science Institute - Una de las autoridades mundiales líderes en nutrición, cuidado y bienestar animal</p>
                 </div>      
